# monie-backend

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
.github/: FUNDING.yml
.github/workflows/: docker-image.yml  rust.yml
cryptography/: Cargo.toml
cryptography/src/: cryptography.rs  e521.rs  lib.rs
rpc/: Cargo.toml  build.rs
rpc/proto/: accounts.proto  auth.proto  feed.proto  media.proto  user.proto
rpc/src/: lib.rs
src/: authentication.rs  data.rs  feed.rs  main.rs  rpc_server.rs  server.rs
src/api/: authentication.rs  mod.rs  timeline.rs
src/api/models/: media.rs  mod.rs  plot.rs  session.rs  story.rs  user.rs
src/data/: db.rs  passwords.rs  timeline.rs
src/data/db/: db.rs
src/data/db/models/: audio.rs  author.rs  blab.rs  gif.rs  image.rs  media.rs  mod.rs  music.rs  plot.rs  story.rs  video.rs
src/domain/models/: audio.rs  author.rs  blab.rs  gif.rs  image.rs  media.rs  mod.rs  music.rs  plot.rs  session.rs  story.rs  user.rs  video.rs
