[package]
name = "monie-backend"
version = "0.1.0"
edition = "2021"
authors = ["Nie <nie@usmonie.com>"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

[workspace]
members = [
    "cryptography",
    "rpc"
]

[dependencies]
monie-rpc = { path = "rpc", version = "0.1.0" }
cryptography = { path = "cryptography", version = "0.1.0" }

async-trait = "0.1.59"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.0.0"
dotenv = "0.15.0"
erased-serde = "0.3"
futures = "0.3.25"
rand = "0.8.5"
rug = "1.17.0"
tonic = { version = "0.8.3", features = ["transport"] }
tonic-health = "0.8.0"
tokio = { version = "1.5.0", features = ["full"] }
serde = { version = "1.0.125" }
lazy_static = "1.4.0"
uuid = { version = "1.2.2", features = ["v4"] }
