[package]
name = "monie-backend"
version = "0.1.0"
edition = "2021"
authors = ["Nie <nie@usmonie.com>"]

[workspace]
members = ["rpc"]

[dependencies]
monie-rpc = { path = "rpc", version = "0.1.0" }
enigma = { git = "https://github.com/usmonie/enigma" }
e521_curve = { git = "https://github.com/usmonie/e521_curve" }

async-trait = "0.1.59"
dotenv = "0.15.0"
erased-serde = "0.3"
futures = "0.3.25"
rand = "0.8.5"
random_name_generator = "0.1.2"
regex = "1.7.0"
num = "0.4.0"
num-bigint-dig = "0.8.2"
num_cpus = "1.14.0"
tonic = { version = "0.8.3", features = ["transport"] }
tonic-health = "0.8.0"
tokio = { version = "1.5.0", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
passwords = "3.1.12"
serde = { version = "1.0.125" }
socket2 = { version = "0.4", features = ["all"] }
lazy_static = "1.4.0"
uuid = { version = "1.2.2", features = ["v4"] }
