[package]
name = "cryptography"
version = "0.1.0"
edition = "2021"

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

[lib]
crate-type = ["dylib"]

[dependencies]
aes-gcm = "0.10.1"
num = "0.4.0"
rand = "0.8.5"
ring = "0.17.0-alpha.11"
rug = "1.17.0"
serde = { version = "1.0.125", features = ["derive"] }
sha3 = "0.10.6"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.20.0", default-features = false }
